# changelogagent

./: .gitignore  README.md  pyproject.toml
changelogagent/: __init__.py  cli.py
changelogagent/analysis/: __init__.py  anomaly.py  causal.py  cross_project.py  predictive.py  quality.py  sentiment.py
changelogagent/core/: db.py  models.py
changelogagent/export/: __init__.py  formats.py
changelogagent/impact/: __init__.py  analyzer.py
changelogagent/ingest/: __init__.py  ci_events.py  deploy_events.py  git_events.py  ingestor.py
changelogagent/narrator/: __init__.py  engine.py  templates.py
changelogagent/realtime/: __init__.py  live.py
changelogagent/reports/: __init__.py  stakeholders.py
changelogagent/search/: __init__.py  engine.py
changelogagent/server/: app.py  webhooks.py
changelogagent/sources/: __init__.py  adapters.py  clients.py
changelogagent/summarizer/: __init__.py  summarizer.py
changelogagent/timeline/: __init__.py  builder.py
changelogagent/visualization/: __init__.py  timeline.py
tests/: __init__.py  conftest.py  test_core.py  test_exports_and_api.py  test_impact.py  test_ingest.py  test_integration.py  test_narrator.py  test_summarizer.py  test_timeline.py  test_v2.py
