[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "changelogagent"
version = "0.1.0"
description = "A living project narrative engine for operational events."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ChangelogAgent" }]
dependencies = [
  "click>=8.1",
  "fastapi>=0.110",
  "httpx>=0.26",
  "pydantic>=2.6",
  "rich>=13.7",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
changelogagent = "changelogagent.cli:cli"

[tool.setuptools.packages.find]
include = ["changelogagent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
